--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.doctordaddysir</groupId>
-    <artifactId>PluginLoader</artifactId>
+    <artifactId>plexion-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>plugin-loader</module>
+        <module>plugins</module> <!-- includes hello/goodbye via its own pom.xml -->
+    </modules>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
@@ -15,5 +21,7 @@
     </properties>
     <dependencies>
     </dependencies>
+
+
 
 </project>
