--- a/plugins/helloPlugin/pom.xml
+++ b/plugins/helloPlugin/pom.xml
@@ -22,25 +22,18 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.0</version>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <id>copy-compiled-classes</id>
                         <phase>package</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
+                        <goals><goal>run</goal></goals>
                         <configuration>
-                            <outputDirectory>${project.basedir}/../../../plugin-loader/plugins</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${project.build.outputDirectory}</directory>
-                                    <includes>
-                                        <include>**/*.class</include>
-                                    </includes>
-                                </resource>
-                            </resources>
+                            <target>
+                                <mkdir dir="${project.basedir}/../../plugin-loader/plugins"/>
+                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
+                                      todir="${project.basedir}/../../plugins"/>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
