Rename "plugin" package to "plugins" and update references
Updated all packages, identifiers, messages, and configurations to use "plugins" instead of "plugin" for consistency. Adjusted Maven build configurations to include resource handling and enable overwriting of plugin artifacts during packaging.

--- a/plugin-loader/pom.xml
+++ b/plugin-loader/pom.xml
@@ -14,6 +14,6 @@
     <name>PleXion Core Framework</name>
 
     <dependencies>
-        <!-- your plugin API dependencies -->
+        <!-- your plugins API dependencies -->
     </dependencies>
 </project>
