Refactor plugin loader and fix configuration issues
Streamline plugin registration by removing unused methods and adding a cache to prevent duplicate registrations. Update POM files and resource paths for consistency and correct plugin property key. Fix incorrect capitalization in directory path for plugin deployment.

--- a/plugins/helloPlugin/pom.xml
+++ b/plugins/helloPlugin/pom.xml
@@ -22,6 +22,7 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <targetPath>META-INF</targetPath>
                 <includes>
                     <include>plugin.properties</include>
                 </includes>
@@ -49,7 +50,7 @@
                         <configuration>
                             <target>
                                 <copy file="${project.build.directory}/${project.build.finalName}.jar"
-                                      todir="${project.basedir}/../../../plugin-loader/plugins"
+                                      todir="${project.basedir}/../../../PluginLoader/plugins"
                                       overwrite="true"/>
                             </target>
                         </configuration>
