--- a/plugins/goodbyePlugin/pom.xml
+++ b/plugins/goodbyePlugin/pom.xml
@@ -20,6 +20,7 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <targetPath>META-INF</targetPath>
                 <includes>
                     <include>plugin.properties</include>
                 </includes>
@@ -47,7 +48,7 @@
                         <configuration>
                             <target>
                                 <copy file="${project.build.directory}/${project.build.finalName}.jar"
-                                      todir="${project.basedir}/../../../plugin-loader/plugins"
+                                      todir="${project.basedir}/../../../PluginLoader/plugins"
                                       overwrite="true"/>
                             </target>
                         </configuration>
