--- a/plugins/goodbyePlugin/pom.xml
+++ b/plugins/goodbyePlugin/pom.xml
@@ -44,7 +44,9 @@
                 <executions>
                     <execution>
                         <phase>package</phase>
-                        <goals><goal>run</goal></goals>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                         <configuration>
                             <target>
                                 <copy file="${project.build.directory}/${project.build.finalName}.jar"
