Rename plugins directory to plexion-plugins
Updated all paths, references, and module definitions to reflect the directory rename from "plugins" to "plexion-plugins". Removed an unused method from PluginLoader for cleanup. This change ensures consistency and improves clarity in the project structure.

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <modules>
         <module>plexion-base</module>
-        <module>plugins</module> <!-- includes hello/goodbye via its own pom.xml -->
+        <module>plexion-plugins</module>
     </modules>
 
     <properties>
